Am lucrat la 28 html

--- a/html-head-elements.html
+++ b/html-head-elements.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>A Meaningful Page Title</title>
+        <title>Eu vreau sa fiu bun IT</title>
     </head>
     <body>
     </body>
