--- a/html-css-new.html
+++ b/html-css-new.html
@@ -4,10 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mergem spre bine!</title>
+    <title>Document</title>
 </head>
+<style>
+   body {background-color: powderblue;}
+   h1   {color: blue;}
+   p    {color: red;} 
+</style>
 <body>
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
+  <h1>This is a heading</h1>
+  <p>This is a paragrafh.</p>  
+
 </body>
 </html>
