--- a/html-image-new.html
+++ b/html-image-new.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mergem spre bine!</title>
+    <title>Document</title>
 </head>
+
 <body>
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
+    <h2>HTML Image</h2>
+    <img src="pic_trulli.jpg" alt="Trulli" wigth="500" height="333">
+    
 </body>
 </html>
