--- a/html-links-hyperlinks-new.html
+++ b/html-links-hyperlinks-new.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mergem spre bine!</title>
+    <title>Document</title>
 </head>
 <body>
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
+    <h1>HTML Links</h1>
+
+    <p><a href="https://www.w3schools.com/">Visit W3Schools.com!</a></p>
+    
 </body>
 </html>
