am adaugat doua paragrafe

--- a/html-symbols-new.html
+++ b/html-symbols-new.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <h1>commiturile sunt frumoase</h1>
+    <p>hai sa mai facem inca un commit</p>
+    <p>commit se scrie cu doi de "m"</p>
 </body>
 </html>
