CSS RULE SET, COMMIT

--- a/html-colors-three-new.html
+++ b/html-colors-three-new.html
@@ -9,7 +9,7 @@
 <body>
 
     <h1 style="background-color:DodgerBlue;"Hello World</h1>
-    <p style="background-color:tomato;"</p>
+    <p style="background-color:tomato;">
     <p>Adding Styles to a Web Page</p>
     <p>There are several ways to add your styles to a web page:</p>    
     
