--- a/html-colors-three-new.html
+++ b/html-colors-three-new.html
@@ -8,9 +8,10 @@
 </head>
 <body>
 
-    <h1 style="background-color:DodgerBlue;"Hello World</h1>
+    <h1 style="background-color:DodgerBlue;">Hello World</h1>
     <p style="background-color:tomato;">
     <p>Adding Styles to a Web Page</p>
+
     <p>There are several ways to add your styles to a web page:</p>    
     
 </body>
