--- a/html-images-three-new.html
+++ b/html-images-three-new.html
@@ -7,8 +7,9 @@
     <title>Despre imagini</title>
 </head>
 <body>
+
     <h2>Marea este o intindere uriasa si albastra pana in zare</h2>
-    <img src="pic_trulli." alt="Trulli" width="500" height="333">
+    <img src="pic_trulli.jpg" alt="Trulli" width="500" height="333">
     
 </body>
 </html>
